--- a/UnrealLocres/UnrealLocres.csproj
+++ b/UnrealLocres/UnrealLocres.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Csv" Version="2.0.62" />
     <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.18.2" />
     <PackageReference Include="Karambolo.PO.Minimal" Version="1.7.0" />
+    <PackageReference Include="XlfParser" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
